// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a ColumnGroup component 1`] = `
<div
  style={
    Object {
      "display": undefined,
    }
  }
/>
`;

exports[`renders a ColumnGroup component with all props configured 1`] = `
<div
  style={
    Object {
      "display": "flex",
    }
  }
/>
`;
